Fix template example